--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -582,15 +582,15 @@ ScopeScreen As screen:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
-                        Height: =48
+                        Height: =If(VarScope,48,0)
                         Size: =If(Parent.Width<358,14,Parent.Width>358,16,14)
                         Text: |-
                             =//Parent.DisplayName
                             "Scope"
+                        Visible: =VarScope
                         Width: =Parent.Width - 60
                         Wrap: =false
                         X: =30
-                        Y: =10
                         ZIndex: =1
 
                     intxtScope As combobox:
@@ -605,20 +605,20 @@ ScopeScreen As screen:
                         Height: =50
                         HoverBorderColor: =
                         HoverFill: =RGBA(0, 0, 0, 0)
-                        InputTextPlaceholder: ="Search Scope of work"
-                        IsSearchable: =false
+                        InputTextPlaceholder: ="Search Scope"
                         Items: =' PrimaryScopeofWorks'
+                        OnChange: =Set(VarScope,true);
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                         PressedFill: =RGBA(0, 0, 0, 1)
                         SearchFields: =["shlrf_primaryscopeofworkname"]
-                        SearchItems: =[]
+                        SearchItems: =Search(' PrimaryScopeofWorks',intxtScope.SearchText,"shlrf_primaryscopeofworkname")
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblScope.Y + lblScope.Height + 5
+                        Y: =lblScope.Y + lblScope.Height 
                         ZIndex: =2
 
                     ErrorMessageScope As label:
@@ -668,9 +668,10 @@ ScopeScreen As screen:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
-                        Height: =48
+                        Height: =If(VarScopeofwork,48,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: ="Scope of work"
+                        Visible: =VarScopeofwork
                         Width: =Parent.Width - 60
                         Wrap: =false
                         X: =30
@@ -688,11 +689,11 @@ ScopeScreen As screen:
                         Font: =Font.Arial
                         Height: =50
                         HoverFill: =RGBA(0, 0, 0, 0)
-                        IsSearchable: =false
                         Items: =Filter(SecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=intxtScope.Selected.'PrimaryScopeofWorkName ')
+                        OnChange: =Set(VarScopeofwork,true)
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                         SearchFields: =["shlrf_secondaryscopeofworkname"]
-                        SearchItems: =[]
+                        SearchItems: =Search(Filter(SecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=intxtScope.Selected.'PrimaryScopeofWorkName '),IntxtScopeofwork.SearchText,"shlrf_secondaryscopeofworkname")
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -765,6 +766,7 @@ ScopeScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Height: =50
+                        HintText: ="Custom Scope of work(Manually Entered)"
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
@@ -827,6 +829,7 @@ ScopeScreen As screen:
 
                 btnPreviousSS As button:
                     Fill: =RGBA(255, 0, 0, 1)
+                    Font: =Font.Arial
                     HoverFill: =Color.Red
                     OnSelect: |+
                         =Navigate(UnitScreen);
@@ -842,6 +845,7 @@ ScopeScreen As screen:
 
                 btnNextSS As button:
                     Fill: =RGBA(255, 0, 0, 1)
+                    Font: =Font.Arial
                     HoverFill: =Color.Red
                     OnSelect: |
                         =Set(VarIndicator,true);
